--- a/main.html
+++ b/main.html
@@ -10,7 +10,13 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<div>
+	<h3>
+      My current favourite song is 
+      <a href="https://youtu.be/h_FNt31NVLI?si=9EFWQeUsa1LR0y-W" target="_blank">Erika
+      </a>
+    </h3>
+</div>
 </body>
 
 </html>
